[WPE] checkbox and radio button aren't painted because ThemeAdwaita::m_accentColor is the invalid color https://bugs.webkit.org/show_bug.cgi?id=246667

Reviewed by Carlos Garcia Campos.

ThemeAdwaita is painting checkbox and radio button with the accent
color. GTK port supports accent color, but WPE doesn't.
ThemeAdwaita::m_accentColor was initialized as the invalid color that
was transparent.

* Source/WebCore/platform/adwaita/ThemeAdwaita.cpp:
(WebCore::ThemeAdwaita::accentColor):
* Source/WebCore/platform/adwaita/ThemeAdwaita.h:

Canonical link: https://commits.webkit.org/255668@main